--- a/notebooks/myModel.ipynb
+++ b/notebooks/myModel.ipynb
@@ -19,8 +19,8 @@
    "id": "4947e43c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-16T17:12:34.139190Z",
-     "start_time": "2024-06-16T17:12:33.952079Z"
+     "end_time": "2024-06-16T17:32:31.935564Z",
+     "start_time": "2024-06-16T17:32:31.928562Z"
     }
    },
    "source": [
@@ -28,11 +28,11 @@
     "from seaborn import pairplot\n",
     "from pickle import dump\n",
     "from pathlib import Path\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 21
   },
   {
    "cell_type": "code",
@@ -559,7 +559,6 @@
    },
    "cell_type": "code",
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "dt = DecisionTreeClassifier()\n",
     "dt.fit(X_train, y_train)"
    ],
